@@ -1,3 +1,14 @@
+2003-12-10  Darin Adler  <darin@apple.com>
+
+        Reviewed by Maciej.
+
+        - fixed 3506706: REGRESSION (100-115): onkeyup handlers called twice for active input fields
+
+        * kwq/KWQTextArea.mm: (-[KWQTextAreaTextView keyUp:]): Don't call super because we
+        don't want to pass the event down the responder chain.
+        * kwq/KWQTextField.mm: (-[KWQTextField textView:shouldHandleEvent:]): Return NO for
+        key up events because we don't want to pass the event down the responder chain.
+
 2003-12-10  Richard Williamson   <rjw@apple.com>
 
 	Added method to get to the bridge from a view.  This is
